Bug 29591 - Interlace mode wrongly rejected
Summary: Interlace mode wrongly rejected
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: 7.5 (2009.10)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-16 09:12 UTC by Paul Gardiner
Modified: 2011-04-14 11:01 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Contents of /etc/X11/xorg.conf.d (5.50 KB, text/plain)
2010-08-16 09:14 UTC, Paul Gardiner
no flags Details
/var/log/Xorg.0.log (33.60 KB, application/octet-stream)
2010-08-16 09:14 UTC, Paul Gardiner
no flags Details

Description Paul Gardiner 2010-08-16 09:12:29 UTC
I'm trying to use an X1250 chip and the radeon driver to run a TV via a VGA => Scart circuit. I've had success before, but with opensuse 11.3 the mode line is being rejected because of "interlace mode not supported".

I also tried rebuilding the radeon driver, using 6.12.4 which previously worked, but the mode line was still rejected.

I communicated briefly with Alex Deucher, and he assured me that interlace mode is still supported in the radeon driver. He seemed to suggest that an xserver problem was more likely than this being due to incorrect config, hence the bug report.
Comment 1 Paul Gardiner 2010-08-16 09:14:12 UTC
Created attachment 37902 [details]
Contents of /etc/X11/xorg.conf.d
Comment 2 Paul Gardiner 2010-08-16 09:14:53 UTC
Created attachment 37903 [details]
/var/log/Xorg.0.log
Comment 3 Paul Gardiner 2010-08-17 03:17:37 UTC
I installed opensuse 11.2 and it all works fine now. That's 7.4 xorg release.
v1.6.5 of the server, and v6.12.4 of the radeon driver. The pal mode is accepted and drives my TV.

Another difference between suse 11.2 and 11.3 is that one uses xorg.conf and the other xorg.conf.d, so I cannot rule out that something in my config is actually the cause of the failure.
Comment 4 Alex Deucher 2010-08-17 13:59:12 UTC
The radeon driver supports interlaced modes just fine.  This appears to be an xserver regression.
Comment 5 Alex Deucher 2010-09-07 07:51:52 UTC
I quick scan of xserver for interlaced commits reveals only a few.  If I had to guess I'd say this one may be the problematic one:
http://cgit.freedesktop.org/xorg/xserver/commit/?id=bcafdfbed6f1e1f901c2459f60f94a0da506bd90
Comment 6 Alex Deucher 2010-09-07 08:55:01 UTC
Should be fixed in:
b90cb61ccb0f4f80e0627141f223354a9371d47d
In the past, interlaced worked without setting those paramters which is why no one noticed I guess.
Comment 7 Marius Groeger 2010-09-22 02:30:52 UTC
Unfortunately commit b90cb61ccb0f4f80e0627141f223354a9371d47d does NOT fix the issue. When starting X without KMS, the interlaced modes are correctly listed in xrandr, with KMS they're not. Apparently with KMS something else must be provided by the driver. What exactly that is is unknown to the authors. 

I'd kindly like to ask the Xserver developers to cooperate with the Alex Deucher on this to resolve this regression. I'm happy to do the testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.