radeon: set interlaced and doublescan enabled for randr outputs

interlaced used to work without setting these parameters.  Changes
in the xserver seem to require them now.

Should fix:
https://bugs.freedesktop.org/show_bug.cgi?id=29591